fix hopper dupe glitch